<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.danieldobalian.msalandroidapp.PostSignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <TextView
            android:text="Welcome, "
            android:textColor="@color/text"
            android:textSize="50px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:id="@+id/welcome"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="right"
            android:src="@drawable/microsoft_logo" />
    </LinearLayout>

    <TextView
        android:text="@string/IT"
        android:textColor="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:id="@+id/itStatus" />
    <TextView
        android:text="@string/AT"
        android:textColor="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:id="@+id/atStatus" />

    <TextView
        android:text="@string/RT"
        android:textColor="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="5dp"
        android:id="@+id/rtStatus" />


    <TextView
        android:text="Getting Graph Data..."
        android:textColor="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:id="@+id/graphData" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">

        <Button
            android:text="Call MS Graph"
            android:layout_gravity="bottom|left"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:background="@color/microsoftBlue"
            android:id="@+id/graph" />

        <Button
            android:text="Sign Out"
            android:layout_gravity="bottom|right"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/microsoftBlue"
            android:id="@+id/clearCache" />

    </LinearLayout>
</LinearLayout>
